# student_maintanence_system_backend

./: pyproject.toml  render.yaml  requirements.txt
app/: config.py  database.py  main.py
app/controllers/: auth.py  quiz.py
app/middleware/: auth.py
app/models/: quiz.py  user.py
app/routes/: auth.py  quiz.py
app/schemas/: quiz.py  user.py
