[project]
name = "student-maintanence-system-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "certifi>=2026.5.20",
    "fastapi>=0.136.3",
    "motor>=3.7.1",
    "pydantic[email]>=2.13.4",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.49.0",
]
